# register-ec2-tg

./: Cargo.toml
src/: aws.rs  main.rs
