[package]
name = "register-ec2-tg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aws-config = "0.51.0"
aws-sdk-elasticloadbalancingv2 = "0.21"
clap = { version = "4", features = ["cargo", "derive", "env"] }
log = "0.4"
simple_logger = "4"
systemd-journal-logger = "0.5"
tokio = { version = "1", features = ["macros", "rt", "time"] }

[profile.release]
lto = true
incremental = false
codegen-units = 1
panic = "abort"
strip = true
